--- a/package.json
+++ b/package.json
@@ -6,19 +6,25 @@
   "scripts": {
     "build": "run-s build:clean build:code",
     "build:clean": "rimraf dist",
-    "build:code": "tsc",
+    "build:code": "tsc --project tsconfig.build.json",
     "start": "node dist/server.js",
     "dev": "ts-node-dev src/server.ts",
     "format": "prettier --write **/*.{js,ts}",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
-    "prepare": "test -d node_modules/husky && husky || echo \"husky is not installed\""
+    "prepare": "test -d node_modules/husky && husky || echo \"husky is not installed\"",
+    "test": "jest",
+    "test:unit": "jest --testPathPattern=src/tests/unit",
+    "test:integration": "jest --testPathPattern=src/tests/integration",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "eslint": "^8.57.0",
@@ -28,11 +34,13 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "nodemon": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.3"
   },
@@ -54,5 +62,30 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
     "winston": "^3.12.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.(t|j)s$": [
+        "ts-jest",
+        {
+          "diagnostics": false
+        }
+      ]
+    },
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setup.ts"
+    ],
+    "rootDir": "src",
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "json"
+    ],
+    "testRegex": ".*\\.(spec|test)\\.ts$",
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage"
   }
 }
