--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:clean": "rimraf dist",
     "build:code": "tsc --project tsconfig.build.json",
     "start": "node dist/server.js",
-    "dev": "ts-node-dev src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --exit-child src/server.ts",
     "format": "prettier --write **/*.{js,ts}",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
@@ -31,8 +31,8 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "eslint": "^8.57.0",
+    "eslint-config-love": "^43.1.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
@@ -54,8 +54,6 @@
     ]
   },
   "dependencies": {
-    "@types/express": "^4.17.21",
-    "@types/mongoose": "^5.11.97",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
